# xrc-dummy-canister

./: .gitignore  Cargo.toml  Makefile.toml  README.md  dfx.json
.github/workflows/: build-test.yml
scripts/: deploy_functions.sh  deploy_local.sh  did.sh
src/: app.rs  constants.rs  icrc2-template-canister.did  inspect.rs  lib.rs  utils.rs  xrc-dummy-canister.did
src/app/: balance.rs  configuration.rs  inspect.rs  memory.rs  spend_allowance.rs  test_utils.rs
src/app/balance/: account_balance.rs
src/app/spend_allowance/: key.rs  spend.rs
