[package]
name = "icrc2_template_canister"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "ICRC2 Template Canister"
repository = "https://github.com/veeso-dev/icrc2-template-canister"
version = "0.1.0"

[[bin]]
name = "icrc2-template-canister-did"
path = "src/lib.rs"

[lib]
name = "icrc2_template_canister"
crate-type = ["cdylib"]

[features]
default = []
did = []

[dependencies]
bytes = "1.5"
candid = "0.9"
ic-cdk = "0.11"
ic-cdk-macros = "0.8"
ic-cdk-timers = "0.5"
ic-stable-structures = "0.6"
icrc-ledger-types = "0.1"
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
