[package]
name = "xrc_dummy_canister"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = "ICRC2 Template Canister"
repository = "https://github.com/veeso/xrc-dummy-canister"
version = "0.1.0"

[[bin]]
name = "xrc-dummy-canister-did"
path = "src/lib.rs"

[lib]
name = "xrc_dummy_canister"
crate-type = ["cdylib"]

[features]
default = []
did = []

[dependencies]
bytes = "1.5"
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-macros = "0.8"
ic-stable-structures = "0.6"
ic-xrc-types = "1.2"
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
pretty_assertions = "1"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
